the-manager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-manager
  namespace: the-manager
spec:
  selector:
    app: the-manager
  ports:
    - port: 80
      targetPort: 47421
      protocol: TCP
  type: ClusterIP
